[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'fetchdep'
description = 'A tool to help fetch sources for a project'
authors = [
    {name = 'James Knight', email = 'git@jdknight.me'},
]
requires-python = '>=2.7'
readme = 'README.md'
license = {text = 'BSD-2-Clause'}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development',
    'Topic :: Software Development :: Version Control',
]
dependencies = [
    'pyyaml',
]
dynamic = [
    'version',
]

[project.urls]
Download = 'https://pypi.python.org/pypi/fetchdep'
Source = 'https://github.com/jdknight/fetchdep'

[project.scripts]
fetchdep = 'fetchdep.__main__:main'
